--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minha Nuvem</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/toggle.css">
-    <link rel="stylesheet" href="assets/css/variables.css">
+    <link rel="stylesheet" href="src/assets/css/style.css">
+    <link rel="stylesheet" href="src/assets/css/toggle.css">
+    <link rel="stylesheet" href="src/assets/css/variables.css">
     <script src="https://unpkg.com/phosphor-icons@1.4.0"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
@@ -111,8 +111,8 @@
     <footer>
         <p class="footer">© Minha Nuvem - 2025</p>
     </footer>
-    <script src="assets/js/login.js"></script>
-    <script src="assets/js/toggle.js"></script>
+    <script src="src/assets/js/login.js"></script>
+    <script src="src/assets/js/toggle.js"></script>
 </body>
 
 </html>
