imagem logo add

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         </svg>
     </button>
 
-    <img class="logo-header" width="32" height="32" src="images/logo.png" alt="Logo">
+    <img class="logo-header" width="32" height="32" src="src/assets/images/logo.png" alt="Logo">
     <h5 class="header">Minha Nuvem</h5>
 
     <div class="login-container">
-        <img class="logo-img" src="images/logo.png" alt="Logo Principal">
+        <img class="logo-img" src="src/assets/images/logo.png" alt="Logo Principal">
         <div class="title">
             <h1>Minha Nuvem</h1>
             <p>Armazenamento de dados</p>
