--- a/index.html
+++ b/index.html
@@ -110,12 +110,9 @@
     <footer>
         <p class="footer">© Minha Nuvem - 2025</p>
     </footer>
-<<<<<<< HEAD
-=======
-    <script src="assets/js/auth.js"></script>
->>>>>>> d8f1e25 (sincronizando mudanças)
-    <script src="assets/js/login.js"></script>
-    <script src="assets/js/toggle.js"></script>
+    <script src="src/assets/js/auth.js"></script>
+    <script src="src/assets/js/login.js"></script>
+    <script src="src/assets/js/toggle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="https://unpkg.com/phosphor-icons@1.4.0"></script>
 </body>
