--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
   <title>Minha Nuvem</title>
   <link rel="stylesheet" href="src/assets/css/dashboard.css">
   <link rel="stylesheet" href="src/assets/css/toggle-dashboard.css">
-  <link rel="stylesheet" href="assets/css/variables.css">
+  <link rel="stylesheet" href="src/assets/css/variables.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css">
 
