--- a/dashboard.html
+++ b/dashboard.html
@@ -105,7 +105,14 @@
       <input type="file" id="fileInput" multiple hidden />
       <button onclick="document.getElementById('fileInput').click()">Selecionar arquivos</button>
 
-      </form>
+      <div class="progress-bar" id="progressBar" style="display: none;">
+        <div class="progress" id="progress"></div>
+      </div>
+      <div class="upload-status" id="uploadStatus" style="display: none;">
+        <p id="statusText"></p>
+        <button id="cancelButton" onclick="cancelUpload()" style="display: none;">Cancelar</button>
+      </div>
+      
     </section>
 
     <section class="file-list">
@@ -152,7 +159,7 @@
 
   <script src="src/assets/js/dashboard.js"></script>
   <script src="src/assets/js/toggle-dashboard.js"></script>
-  <script src="app.js" defer></script>
+  <script src="app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@fromsmash/smash-uploader@latest/dist/umd/smash-uploader.min.js"></script>
 </body>
 
