--- a/dashboard.html
+++ b/dashboard.html
@@ -104,7 +104,7 @@
       <p>Arraste e solte os arquivos aqui ou clique para selecionar</p>
       <input type="file" id="fileInput" multiple hidden />
       <button onclick="document.getElementById('fileInput').click()">Selecionar arquivos</button>
-
+      <button onclick="upload()">Enviar</button>
       <div class="progress-bar" id="progressBar" style="display: none;">
         <div class="progress" id="progress"></div>
       </div>
@@ -112,7 +112,6 @@
         <p id="statusText"></p>
         <button id="cancelButton" onclick="cancelUpload()" style="display: none;">Cancelar</button>
       </div>
-      
     </section>
 
     <section class="file-list">
