--- a/dashboard.html
+++ b/dashboard.html
@@ -104,13 +104,15 @@
       <p>Arraste e solte os arquivos aqui ou clique para selecionar</p>
       <input type="file" id="fileInput" multiple hidden />
       <button onclick="document.getElementById('fileInput').click()">Selecionar arquivos</button>
-      <button onclick="upload()">Enviar</button>
+      
       <div class="progress-bar" id="progressBar" style="display: none;">
         <div class="progress" id="progress"></div>
       </div>
       <div class="upload-status" id="uploadStatus" style="display: none;">
         <p id="statusText"></p>
-        <button id="cancelButton" onclick="cancelUpload()" style="display: none;">Cancelar</button>
+      </div>
+      <div class="upload-actions">
+      <button class= "sendButton" id="sendButton" onclick="sendFiles()">Enviar</button>
       </div>
     </section>
 
