--- a/dashboard.html
+++ b/dashboard.html
@@ -137,17 +137,24 @@
   <aside class="right-sidebar">
     <h3>Acesso Rápido</h3>
     <ul id="quickAccessList">
-
-      <li><i class="ph-fill ph-file-doc"></i></li>
-      <h5>Estudo de caso.doc</h5>
-      <li><i class="ph-fill ph-file-image"></i></li>
-      <h5>Férias.jpg</h5>
-      <li><i class="ph-fill ph-file-text"></i></li>
-      <h5>Anotações.txt</h5>
-      <li><i class="ph-fill ph-file-archive"></i></li>
-      <h5>Arquivos.zip</h5>
+      <li>
+        <i class="ph-fill ph-file-doc"></i>
+        <span>Estudo de caso.doc</span>
+      </li>
+      <li>
+        <i class="ph-fill ph-file-image"></i>
+        <span>Férias.jpg</span>
+      </li>
+      <li>
+        <i class="ph-fill ph-file-text"></i>
+        <span>Anotações.txt</span>
+      </li>
+      <li>
+        <i class="ph-fill ph-file-archive"></i>
+        <span>Arquivos.zip</span>
+      </li>
     </ul>
-
+    
     <div class="history-info">
       <h4>Histórico</h4>
       <ul>
@@ -159,7 +166,7 @@
   </aside>
   </div>
 
-  <script src="src/assets/js/dashboard.js"></script>
+  <script type="module" src="src/assets/js/dashboard.js"></script>
   <script src="src/assets/js/toggle-dashboard.js"></script>
   <script src="app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@fromsmash/smash-uploader@latest/dist/umd/smash-uploader.min.js"></script>
