transformando em modulos os js

--- a/dashboard.html
+++ b/dashboard.html
@@ -186,11 +186,11 @@
     </div>
   </aside>
   </div>
-
+  <script type="module" src="app.js"></script>
+  <script type="module" src="src/assets/js/smash-uploader.js"></script>
   <script type="module" src="src/assets/js/dashboard.js"></script>
-  <script src="src/assets/js/toggle-dashboard.js"></script>
-  <script src="app.js"></script>
-  <script src="src/assets/js/smash-uploader.js"></script>
+  <script type="module" src="src/assets/js/toggle-dashboard.js"></script>
+  
   <script src="https://cdn.jsdelivr.net/npm/@fromsmash/smash-uploader@latest/dist/umd/smash-uploader.min.js"></script>
 </body>
 
