--- a/dashboard.html
+++ b/dashboard.html
@@ -129,7 +129,7 @@
     </section>
 
     <div class="upload-actions">
-      <button class= "sendButton" id="sendButton" onclick="sendFiles()">Enviar</button>
+      <button class= "sendButton" id="sendButton">Enviar</button>
     </div>
 
     <section class="file-list">
