--- a/dashboard.html
+++ b/dashboard.html
@@ -181,6 +181,8 @@
     </div>
   </aside>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/@fromsmash/smash-uploader@latest/dist/umd/smash-uploader.min.js"></script>
+  <script type="module" src="./src/assets/js/smash-uploader.js"></script>
   <script type="module" src="./app.js"></script>
   <script type="module" src="./src/assets/js/dashboard.js"></script>
   <script type="module" src="./src/assets/js/toggle-dashboard.js"></script>
