--- a/dashboard.html
+++ b/dashboard.html
@@ -181,8 +181,7 @@
     </div>
   </aside>
   </div>
-  <script type="module" src="https://unpkg.com/@smash-sdk/uploader/dist/SmashUploader.browser.js"></script>
-  <script type="module" src="./smash-uploader.js"></script>
+  <script type="module" src="https://unpkg.com/@fromsmash/smash-uploader@latest/dist/umd/smash-uploader.min.js"></script>
   <script type="module" src="./app.js"></script>
   <script type="module" src="./src/assets/js/dashboard.js"></script>
   <script type="module" src="./src/assets/js/toggle-dashboard.js"></script>
