--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="src/assets/css/variables.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css">
-
+  <script src="https://unpkg.com/@smash-sdk/uploader/dist/SmashUploader.browser.css"></script>
 </head>
 
 <body>
@@ -181,7 +181,7 @@
     </div>
   </aside>
   </div>
-  <script type="module" src="https://unpkg.com/@fromsmash/smash-uploader@latest/dist/umd/smash-uploader.min.js"></script>
+  
   <script type="module" src="./app.js"></script>
   <script type="module" src="./src/assets/js/dashboard.js"></script>
   <script type="module" src="./src/assets/js/toggle-dashboard.js"></script>
