--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="src/assets/css/variables.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css">
-  <script src="https://unpkg.com/@smash-sdk/uploader/dist/SmashUploader.browser.css"></script>
 </head>
 
 <body>
@@ -102,7 +101,7 @@
     <h4>Adicionar:</h4>
     <section class="upload-area" id="dropzone">
       <p>Arraste e solte os arquivos aqui ou clique para selecionar</p>
-      <input type="file" id="fileInput" multiple hidden />
+      <input type="file" id="fileInput" multiple hidden>
       <button onclick="document.getElementById('fileInput').click()">Selecionar arquivos</button>
             
       <div class="selected-files" id="selectedFiles">
@@ -129,7 +128,7 @@
     </section>
 
     <div class="upload-actions">
-      <button class= "sendButton" id="sendButton"onclick="uploadFile()">Enviar</button>
+      <button class= "sendButton" id="sendButton"onclick="upload()">Enviar</button>
     </div>
 
     <section class="file-list">
@@ -181,7 +180,7 @@
     </div>
   </aside>
   </div>
-  
+  <script src="https://unpkg.com/@smash-sdk/uploader/dist/SmashUploader.browser.js"></script>
   <script type="module" src="./app.js"></script>
   <script type="module" src="./src/assets/js/dashboard.js"></script>
   <script type="module" src="./src/assets/js/toggle-dashboard.js"></script>
