--- a/dashboard.html
+++ b/dashboard.html
@@ -122,7 +122,7 @@
     </section>
 
     <div class="upload-actions">
-      <button class="sendButton" id="sendButton" onclick="upload();">Enviar</button>
+      <button class="sendButton" id="sendButton">Enviar</button>
       <div class="selected-files" id="selectedFiles">
         <p>Nenhum arquivo selecionado</p>
         <p id="fileCount">0 arquivos selecionados</p>
