livre de pastas

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Minha Nuvem</title>
-    <link rel="icon" type="image/svg+xml" href="src/assets/images/logo.png">
-    <link rel="stylesheet" href="src/assets/css/style.css">
-    <link rel="stylesheet" href="src/assets/css/toggle.css">
-    <link rel="stylesheet" href="src/assets/css/variables.css">
+    <link rel="icon" type="image/svg+xml" href="images/logo.png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/toggle.css">
+    <link rel="stylesheet" href="css/variables.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
     </style>
@@ -41,11 +41,11 @@
         </svg>
     </button>
 
-    <img class="logo-header" width="32" height="32" src="src/assets/images/logo.png" alt="Logo">
+    <img class="logo-header" width="32" height="32" src="images/logo.png" alt="Logo">
     <h5 class="header">Minha Nuvem</h5>
 
     <div class="login-container">
-        <img class="logo-img" src="src/assets/images/logo.png" alt="Logo Principal">
+        <img class="logo-img" src="images/logo.png" alt="Logo Principal">
         <div class="title">
             <h1>Minha Nuvem</h1>
             <p>Armazenamento de dados</p>
@@ -111,9 +111,9 @@
     <footer>
         <p class="footer">© Minha Nuvem - 2025</p>
     </footer>
-    <script src="src/assets/js/auth.js"></script>
-    <script src="src/assets/js/login.js"></script>
-    <script src="src/assets/js/toggle.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/login.js"></script>
+    <script src="js/toggle.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="https://unpkg.com/phosphor-icons@1.4.0"></script>
 </body>
