--- a/dashboard.html
+++ b/dashboard.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minha Nuvem</title>
-  <link rel="stylesheet" href="src/assets/css/dashboard.css">
-  <link rel="stylesheet" href="src/assets/css/toggle-dashboard.css">
-  <link rel="stylesheet" href="src/assets/css/variables.css">
+  <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="stylesheet" href="css/toggle-dashboard.css">
+  <link rel="stylesheet" href="css/variables.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css">
 </head>
@@ -16,7 +16,7 @@
   <header class="app-header">
 
     <div class="logo-area">
-      <img src="src/assets/images/logo.png" alt="Logo" width="28" height="28" />
+      <img src="images/logo.png" alt="Logo" width="28" height="28" />
       <span class="app-name">Minha Nuvem</span>
     </div>
     <div class="right-header">
@@ -33,7 +33,7 @@
 
       <div class="user-info">
         <span id="userName"></span>
-        <img src="src/assets/images/vetor-usuario.png" alt="Usuário" width="28" height="28" />
+        <img src="images/vetor-usuario.png" alt="Usuário" width="28" height="28" />
       </div>
 
       <button id="themeToggle">
@@ -180,8 +180,8 @@
   </aside>
   </div>
   <script src="https://unpkg.com/@smash-sdk/uploader/dist/SmashUploader.browser.js"></script>
-  <script type="module" src="./app.js"></script>
-  <script type="module" src="./src/assets/js/toggle-dashboard.js"></script>
+  <script type="module" src="app.js"></script>
+  <script type="module" src="js/toggle-dashboard.js"></script>
 </body>
 
 </html>
